# cgNAplusParams

./: .gitignore  .gitmodules  README.md  example.py  opt.py  opt_curvature.py  opt_curvature_deap.py  opt_multi.py  pyproject.toml
cgnaplusparams/: __init__.py  _pycondec.py  _so3.py  cgnaplus.py  cgnaplus_conf.py  cgnaplus_params.py  junction_connector.py  naming_conventions.py  rbp.py  rbp_conf.py
cgnaplusparams/io/: pdb.py  visualize_cgnaplus.py  visualize_rbp.py
cgnaplusparams/observables/: curvature.py  distance.py
cgnaplusparams/utils/: assignment_utils.py  crick_flip.py
